# aoc-riseofphoenix

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PUSH_INSTRUCTIONS.md  README.md  build_launcher.bat  build_launcher.ps1  build_replay_inspect.ps1  build_server.ps1  vcpkg.json
certs/: README.md  amazon_ca_bundle.pem  full_chain_raw.txt  intrepid_chain.txt  regenerate.ps1  server_ext.cnf  windows_roots.pem
config/: auth-server.json  generated_channels.json  launcher.json  paths.json  rates.json  realm.json  server.json
docs/: AOC-WIRE-FORMAT-RE-KNOWLEDGE.md  AUTHORITATIVE_SERVER_PLAN.md  BOOTSTRAP-STATIC-VS-DYNAMIC.md  CRITICAL-DATA-SOURCE-INSIGHT.md  FIRST-100-ANALYSIS-SUMMARY.md  FIRST-100-QUICK-REFERENCE.txt  IDA-BUNCH-PARSER-GUIDE.md  LIVE-SERVER-STATE-ARCHITECTURE.md  NATIVE-EMISSION-ARCHITECTURE.md  PATCHABLE-PROPERTIES-CATALOG.md  PATH-B-SYNTHETIC-PROPERTY-UPDATE.md  PATH-X-IMPLEMENTATION.md  PROJECT-OVERVIEW.md  PURE-NATIVE-STATUS.md  RE-AOC-BINARY-GROUND-TRUTH.md  RE-AOC-CLASSES.md  RE-COMPLETE-FRepCmdType.md  RE-FINDINGS-COMPLETE-PROPERTY-DISPATCH.md  RE-FINDINGS-FOBJECTREPLICATOR.md  RE-PARTIAL-CHAIN-FINDINGS.md  RE-PLAYERSTATE-REPLAYOUT.md  RE-V3-SUBOBJECT-TARGETING.md  SESSION-2026-04-24-DEEP-RE-FINDINGS.md  SESSION-2026-04-27-SAVE.md  SESSION-END-STATE.md  TIER-1-PROPERTY-PATCHER.md  WHAT-WE-CAN-DO-NOW.md  aoc-packagemap-xrefs.md  aoc-wire-format-decoded.md  architecture.md  bootstrap-2000-catalog.jsonl  bootstrap-2000-catalog.md  character-name-location.md  class-specific-field-diff.md  client-bunch-validation-re.md  first-100-actor-class-catalog.md  first-100-dependencies.md  first-100-minimal-ordered-subset.md  first-100-packets-inventory.md  intrepid-packagemap-re.md  (+30 more)
docs/aoc-sdk/: README.md
docs/aoc-sdk/CppSDK/: NameCollisions.inl  SDK.hpp
docs/aoc-sdk/Dumpspace/: ClassesInfo.json  EnumsInfo.json  FunctionsInfo.json  OffsetsInfo.json  StructsInfo.json
docs/aoc-sdk/IDAMappings/: 5.6.0-438018+++game+jvs_game_rel-AOC.idmap
docs/aoc-sdk/Mappings/: 5.6.0-438018+++game+jvs_game_rel-AOC.usmap
docs/archive/: code-audit-2026-04-21.md  session-h-roadmap.md
docs/ida-dumps/: 0x1400F9CC0.txt  0x14133EDD0.txt  0x141A81178.txt  0x141B0D398.txt  0x141C17D80.txt  0x1431CFCF0.txt  0x143A20150.txt  0x144BCB840.txt  0x144BD2190.txt  0x144C0F4C0.txt  0x144DEDA40.txt  0x1450357c0.txt  0x1450360E0.txt  0x14503e260.txt  0x14504f1a0.txt  0x14504f7c0.txt  0x145057c30.txt  0x14728C7F8.txt  0x1494648B0.txt  ALL PLAYER KEYWORDS IDA.txt  ALLBUNCHKEYWORD.txt  All Character Keywords IDA.txt  AoC PlayerController Replicated.txt  AoCPlayerController.txt  Archetype.txt  CharacterLODSettings.txt  FNAMEGUESS.txt  Meesage TO Cy.txt  NetGUID.txt  New Text Document (2).txt  New Text Document (3).txt  New Text Document (4).txt  New Text Document (5).txt  New Text Document (6).txt  New Text Document (8).txt  New Text Document.txt  Other Client Finding.txt  PackageMapClien.txt  PayloadKeywords.txt  README.md  (+291 more)
docs/re-plan/: POSSESSION-RESOLUTION.md  PUBLIC-PROGRESS-2026-06-12.md  REPINDEX-RESOLUTION.md  WORLD-ENTRY-FIX.md  appearance-repindices.md  re-appearance-asset-preload.md
docs/re-plan/poss/: CLASSNETCACHE-TABLE.md  CLIENTRESTART-PARAM-FROM-REPLAY.md  CR-INDEX-FROM-ANCHORS.md  INDEX-NAME-MAP.md  REAL-RECEIVER-FRAMING.md
prebuilt/eossdk-proxy/: README.md
proto/: ics_auth.proto  ics_common.proto  ics_launcher.proto  ics_patcher.proto  ics_patcher_v2.proto  ics_tether.proto  ics_xclient.proto
scripts/: build.ps1  build_eossdk_proxy.bat  check_possession_oracle.ps1  drive_aoc_client.ps1  focus_aoc_client.ps1  install_eossdk_proxy.bat  launch_all.bat  launch_all_native.bat  map_sequence_to_server_log.ps1  run_calv_fname_payload_probe.ps1  run_calv_isolate_probe.ps1  run_calv_mode15_probe.ps1  run_calv_prefix_boundary_probe.ps1  run_calv_probe_matrix.ps1  run_native_probe.ps1
scripts/release/: launch_all_hybrid.bat  launch_all_native.bat
src/: eac_popup_mover.cs  eossdk_proxy.cpp  launcher_main.cpp  main.cpp  tether_server_main.cpp
src/data/: bootstrap_data.h
src/generators/: generators.h  noop_generator.cpp  recorded_generator.cpp
src/net/: appearance_data.cpp  appearance_data.h  appearance_emitter.cpp  appearance_emitter.h  bootstrap_emitter.cpp  bootstrap_emitter.h  bunch_generator.h  captured_pc_actoropen_tail.h  captured_pc_tail_substituted.h  captured_pkt78_full_stream.h  captured_pkt78_netguid_map.h  captured_pkt78_remapped_stream.h  captured_pkt78_substituted_stream.h  captured_pkt78_v3_channel_substituted_stream.h  client_session.h  game_server.h  live_world.cpp  live_world.h  native_connect_sequencer.cpp  native_connect_sequencer.h  nmt_opcodes.h  opcode_dispatcher.cpp  opcode_dispatcher.h  pawn_emitter.cpp  pawn_emitter.h  pc_emitter.cpp  pc_emitter.h  player_pawn_emitter.cpp  player_pawn_emitter.h  player_pawn_splicer.cpp  player_pawn_splicer.h  player_state_emitter.cpp  player_state_emitter.h  sc_bunch_parser.h  session_registry.cpp  session_registry.h  udp_packet_emitter.cpp  udp_packet_emitter.h  ue5_replication.h  world_bootstrap_emitter.cpp  (+2 more)
src/platform/: msvc_stl_compat.cpp
src/protocol/: README.md  aoc_actor_tracking.h  bunch_builder.h  character_profile.h  net_guid_allocator.h
src/tools/: replay_inspect.cpp  test_actor_builder.cpp  test_decode_pc_spawn.cpp  test_dispatcher.cpp  test_live_server.cpp  test_name_update_bunch.cpp  test_nmt_challenge.cpp  test_nmt_netguid_assign.cpp  test_nmt_welcome.cpp  test_package_map_export.cpp  test_packet_parser.cpp  test_pawn_spawn_diff.cpp  test_pc_spawn_diff.cpp  test_pkt104_round_trip.cpp  test_pkt22_round_trip.cpp  test_player_controller_builder.cpp  test_property_update_bunch_builder.cpp  test_replay_mutator.cpp  test_replayout_codecs.cpp  test_replication.cpp  test_schemas.cpp  test_simulation.cpp
src/util/: proxy_logger.h
tools/: REPLAY_ANALYSIS_FINDINGS.md  extract_pkt78_subobjects.py  netguid_dependency_tracker.py  netguid_remap.py  pkt78_subobjects_extracted.txt  replay_decoder.py  replay_full_analyze.py  replay_netguid_map.py
tools/ghidra/: DecompAoCTargets.java
(+2043 files in other folders)
